# ai-state-management

./: .env.example  .gitignore  Makefile  README.md  design.md  docker-compose.yml  main.py  pyproject.toml
.github/instructions/: guide.instructions.md
chatbot/: DESIGN.md  README.md  __init__.py  bot.py  config.py  memory.py  message_handler.py  session_manager.py  simulator.py  simulator_tui.py  tui_dashboard.py
config/: dm-source-aurora.yaml  dm-task-aurora-to-tidb-full.yaml
docs/: MIGRATION.md  PLACEMENT_RULES.md  README.md  SCHEMA.md  schema-erd.mmd
infrastructure/: docker-compose.yml  haproxy.cfg
migration/: MIGRATION.md  cdc_full_sync.sh  cdc_sync.sh  dm-source-aurora.yaml  dm-task-aurora-to-tidb-all.yaml  dm-task-aurora-to-tidb-full.yaml  dm-task-aurora-to-tidb.yaml
notebooks/: aurora_connection_test.ipynb  retriever.ipynb  sanity_check.ipynb  sync_check.ipynb
scripts/: README.md  check_schemas.py  check_sync.py  config.py  demo_placement.py  generate_test_data.py  init_db.sh  init_db_colocated.sh  init_dbs.sh  init_schema.sql  init_schema_aurora.sql  init_schema_tidb.sql  init_schema_with_placement.sql  load_test_data.py  reset_db.sh  verify_binlog.py
scripts/seed/: bots.jsonl  messages.jsonl  sessions.jsonl  users.jsonl
